# flet_desktop_drop

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
docs/: FletDropzoneV2.md  api.md  index.md
examples/flet_desktop_drop_example/: pyproject.toml
examples/flet_desktop_drop_example/src/: main.py
site/api/: index.html
site/search/: search_index.json
src/flet_desktop_drop/: __init__.py
src/flet_desktop_drop.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/flutter/flet_desktop_drop/lib/src/: flet_desktop_drop.dart
