[project]
name = "flet-desktop-drop"
version = "0.1.0"
description = "Desktop drop control for Flet"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet contributors", email = "you@example.com" }
]
dependencies = [
    "flet>=0.80.1",
]

[dependency-groups]
dev = [
    "flet[all]>=0.80.1",
]

[project.urls]
Documentation = "https://github.com/Bbalduzz/flet-desktop-drop"
Repository = "https://github.com/Bbalduzz/flet-desktop-drop"
Issues = "https://github.com/Bbalduzz/flet-desktop-drop/issues"

[tool.setuptools.package-data]
"flutter.flet_desktop_drop" = ["**/*"]

[tool.setuptools]
license-files = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
